# mineacraft

./: CMakeLists.txt
include/: Camera.hpp  Program.hpp  gl_includes.hpp  main.hpp  saske.hpp
include/opengl/: GLBuffer.hpp  ShaderProgram.hpp  VertexArray.hpp  Window.hpp
include/utils/: fs.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Program.cpp  main.cpp  saske.cpp
src/opengl/: GLBuffer.cpp  ShaderProgram.cpp  VertexArray.cpp  Window.cpp
src/shaders/: fragment.glsl  vertex.glsl
src/utils/: fs.cpp
